--- a/package.json
+++ b/package.json
@@ -2,14 +2,8 @@
   "name": "lpck",
   "version": "1.0.0",
   "description": "Install local packages",
-  "main": "./bin/index.js",
   "type": "module",
-  "bin": {
-    "lpck": "./bin/index.js"
-  },
-  "files": [
-    "./bin"
-  ],
+  "bin": "./bin/index.js",
   "scripts": {
     "run": "npx lpck",
     "build": "npx tsc"
